1. Multi-file backup test